# pyleak

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
examples/event_loop_detection/: README.md  docker-compose.yml  pyproject.toml
examples/event_loop_detection/scripts/: create_sample_pdf.py  load_test.py
examples/event_loop_detection/src/pdf_ingest/: __init__.py  app.py
examples/event_loop_detection/tests/: test_blocking.py
src/pyleak/: base.py  combined.py  eventloop.py  pytest_plugin.py  tasks.py  threads.py  utils.py
tests/: test_event_loop_blocking.py  test_plugin.py  test_task_leaks.py  test_testcase.py  test_trio_event_loop_blocking.py
tests/helpers/: event_loop_wrapper.py
